programaPage-picture-bleeding-fix

--- a/src/styles/ProgramaPage.css
+++ b/src/styles/ProgramaPage.css
@@ -25,6 +25,7 @@
 .programaPage__picture {
   width: 80vw;
   min-width: 200px;
+  max-width: 700px;
   padding-bottom: 20vh;
 }
 
@@ -145,6 +146,9 @@
   .programaPage__buttons * {
     font-size: 2.2rem;
   }
+  .programaPage__picture {
+    max-width: 600px;
+  }
 }
 
 @media (max-width: 1325px) {
@@ -185,9 +189,8 @@
   .programaPage__left {
     flex: 0.2;
   }
-
   .navbar__logo {
-    width: 133px;
+    display: none;
   }
 }
 
@@ -197,10 +200,6 @@
   }
   .programaPage__buttons * {
     font-size: 1.9rem;
-  }
-
-  .navbar__logo {
-    display: none;
   }
 
   .programaPage {
